Upload Works fine
$ ionic cordova plugin add cordova-plugin-camera
$ npm install --save @ionic-native/camera
$ npm install firebase --save
Run App in Ionic DevApp in your phone   :
$ ionic serve -c

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic-file-upload",
-  "app_id": "",
+  "app_id": "c4dcf263",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
